1.4/src/deployment-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: neto-backenddep
  labels:
    app: backend-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend-app
  template:
    metadata:
      labels:
        app: backend-app
    spec:
      containers:
      - name: multitool
        image: wbitt/network-multitool:latest
        ports:
        - containerPort: 80
          name: multi-listen
