1.4/src/deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: neto-frontenddep
  labels:
    app: frontend-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend-app
  template:
    metadata:
      labels:
        app: frontend-app
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
          name: nginx-listen
