1.4/src/deployment-multi-container.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: neto-multidep
  labels:
    app: multidep-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: multidep-app
  template:
    metadata:
      labels:
        app: multidep-app
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
          name: nginx-listen
      - name: multitool
        image: wbitt/network-multitool:latest
        ports:
        - containerPort: 8080
          name: multi-listen
        - containerPort: 18443
          name: multi-listens
