1.4/src/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-backend
  labels:
     app:  backend-app
spec:
  selector:
    app: backend-app
  type: ClusterIP 
  ports:
    - name      : multi-listens
      protocol  : TCP
      port      : 9002
      targetPort: 80
