1.4/src/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-nodeport
  labels:
     app:  multidep-app
spec:
  selector:
    app: multidep-app
  type: NodePort
  ports:
    - name      : nginx-listen
      protocol  : TCP
      port      : 9001
      targetPort: 80
    - name      : multi-listens
      protocol  : TCP
      port      : 9002
      targetPort: 8080
